# google-adk-fullstack-template

./: .env.example  .gitignore  README.md  docker-compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  sessions.db
backend/agents/: __init__.py  main_agent.py
backend/config/: __init__.py  services.py  settings.py
backend/data/: auth.db
backend/middleware/: auth.py
backend/models/: auth.py  auth_orm.py
backend/routes/: artifacts.py  auth.py
backend/services/: auth.py  service_factory.py
backend/services/auth_backends/: base.py  inmemory_backend.py  mongo_backend.py  sql_backend.py
backend/tools/: FRAMEWORK_DOCS.md  README.md  __init__.py  api_proxy.py  config.py  config_models.py  examples.py  fastmcp_proxy.py  fastmcp_toolset_factory.py  integrations.py  openapi_toolset_factory.py  registry.py  spec_loader.py  tools_config.yaml
backend/tools/openapi_specs/: todo_api.yaml  weather_api.yaml
deployment/: .env.prod.example  README.md  deploy.sh  nginx.conf
frontend/: Dockerfile  README.md  components.json  index.html  openapi-ts.config.js  openapi-ts.config.ts  orval.config.ts  package.json  test-frontend.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: app.tsx  index.css  main.tsx  routeTree.gen.ts  styles.css
frontend/src/api/: generated.ts  mutator.ts
frontend/src/client/: index.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/: ApiExample.tsx  AuthGuard.tsx  ChatInput.tsx  (+10 more)
logs/: .36c3aaf43ae82d57b4fdef447972677d7d8c82c3-audit.json
(+24 files in other folders)
